<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_us_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/aboutus_image"
                android:src="@drawable/aboutus"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#80000000"/>

            <TextView
                android:id="@+id/about_us_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="@string/about_us"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/about_us_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/about_us_heading"
            android:textColor="@color/colorSecondary"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="46sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_us_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="14dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/about_us_paragraph"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/about_welcome"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingTop="16dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/aboutwelcome"
            android:scaleType="centerCrop"/>

        <!-- Mission Statement Section -->
        <TextView
            android:id="@+id/mission_statement_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_statement_heading"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/mission_statement_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_statement"
            android:justificationMode="inter_word"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"/>

        <!-- Our Vision Section -->
        <TextView
            android:id="@+id/our_vision_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/our_vision_heading"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/our_vision_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/our_vision"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-light"
            android:textSize="14sp"
            android:paddingTop="8dp"/>

        <TextView
            android:id="@+id/card_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/card_heading"
            android:textColor="@color/colorSecondary"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <include layout="@layout/content_main" />

    </LinearLayout>
</ScrollView>