<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CampusLifeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_us_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/aboutus_image"
                android:src="@drawable/aboutus"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#80000000" />

            <TextView
                android:id="@+id/campus_life_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="@string/campusLife"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/campus_life_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/campus_life_heading"
            android:textColor="@color/black"
            android:textSize="39sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center"
        />

        <!-- Centered Line -->
        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:layout_gravity="center" />

        <include
            layout="@layout/section_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!-- campus_life_heading2 -->
        <TextView
            android:id="@+id/campus_life_heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/campus_life_heading2"
            android:textColor="@color/black"
            android:textSize="39sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center"
        />

        <!-- Centered Line -->
        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:layout_gravity="center" />

        <include
            layout="@layout/section_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!-- campus_life_heading3 -->
        <TextView
            android:id="@+id/campus_life_heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/campus_life_heading3"
            android:textColor="@color/black"
            android:textSize="39sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center"
        />

        <!-- Centered Line -->
        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:layout_gravity="center" />

        <include
            layout="@layout/section_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>